Fix content overflow on smaller screens

--- a/packages/social-previews/src/twitter-preview/style.scss
+++ b/packages/social-previews/src/twitter-preview/style.scss
@@ -66,6 +66,7 @@
 
 	.twitter-preview__main {
 		padding-bottom: 1rem;
+		overflow: hidden;
 	}
 
 	.twitter-preview__header {
